--- a/Desafio Nº7/css/index.css
+++ b/Desafio Nº7/css/index.css
@@ -1,11 +1,10 @@
 body {
+  background: -webkit-gradient(linear, left top, right top, from(#858585), to(#ffffff));
+  background: linear-gradient(to right, #858585, #ffffff);
   font-family: calibri;
 }
 
 body .centered-title {
-  background: #858585;
-  background: -webkit-gradient(linear, left top, right top, from(#858585), to(#ffffff));
-  background: linear-gradient(to right, #858585, #ffffff);
   padding-left: 5%;
   padding-right: 5%;
   height: 60px;
@@ -55,32 +54,38 @@ body .centered-title #reset:active {
           transform: scale(1.1);
 }
 
-body #grid-container {
-  width: 65%;
-  float: left;
-  margin: 0px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 50% 50%;
-      grid-template-columns: 50% 50%;
+body .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-body #grid-container .grid-item:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+body .main #grid-container {
+  width: 70vw;
+  height: 100%;
+  float: left;
+  padding-left: 15px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 33% 33% 33%;
+      grid-template-columns: 33% 33% 33%;
+}
+
+body .main #grid-container .grid-item:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   -webkit-transition: -webkit-transform 0.2s;
   transition: -webkit-transform 0.2s;
   transition: transform 0.2s;
   transition: transform 0.2s, -webkit-transform 0.2s;
-  background-color: white;
 }
 
-body #grid-container .grid-item:active {
-  -webkit-transform: scale(1);
-          transform: scale(1);
+body .main #grid-container .grid-item:active {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }
 
-body #grid-container .grid-item {
+body .main #grid-container .grid-item {
   padding: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -91,7 +96,7 @@ body #grid-container .grid-item {
           flex-direction: column;
 }
 
-body #grid-container .grid-item .subtitulo {
+body .main #grid-container .grid-item .subtitulo {
   height: 25px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -102,15 +107,27 @@ body #grid-container .grid-item .subtitulo {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 0.9em;
 }
 
-body #grid-container .grid-item b {
+body .main #grid-container .grid-item b {
   font-size: 11px;
 }
 
-body .image-container {
-  float: right;
-  background-color: #858585;
-  height: 700px;
-  width: 290px;
+body .main #grid-container .grid-item p {
+  font-weight: lighter;
+  font-size: 1.1em;
+}
+
+body .main .image-container {
+  width: 30vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
