--- a/Desafio Nº8/css/index.scss
+++ b/Desafio Nº8/css/index.scss
@@ -13,10 +13,9 @@ body {
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
-            span {
-                font-family: calibri;
-                font-size: 1.5em;
-                font-weight: lighter;
+            .span-text {
+                text-align: center;
+                font: lighter 1.5em calibri;
                 color: white;
             }
             .data {
